sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: not found: value O
   		var i: Int = O;
                             ^AlgCombSort:10: error: not found: value lgr
   		while(i + ecart < lgr){
                                  ^AlgCombSort:13: error: not found: value tri
				tri = true;
                                ^